# MusicVisualizer

./: .gitignore  config.ini.example  main.py  pyproject.toml  util.py
adapters/: base_adapter.py
handlers/: config_handler.py  now_playing_handler.py  sound_device_handler.py
